monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.myproject.bar
      http:
        paths:
          - backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
